// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/cohort/* /api/cohort/ post success 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "A New Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id /api/cohort/:id/scenarios put success 1`] = `
Object {
  "scenarios": Array [
    10,
    20,
    30,
  ],
}
`;

exports[`/api/cohort/* /api/cohort/:id get success 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id put success has updates 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id put success no updates 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id/done (get) success 1`] = `
Object {
  "users": Array [
    Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_owner": true,
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "username": "superuser",
    },
  ],
  "usersById": Object {
    "11": Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    "12": Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    "9": Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    "999": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_owner": true,
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "username": "superuser",
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id/join/:role (get) success 1`] = `
Object {
  "users": Array [
    Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_owner": true,
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "username": "superuser",
    },
  ],
  "usersById": Object {
    "11": Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    "12": Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    "9": Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    "999": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_owner": true,
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "username": "superuser",
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id/participant/:participant_id (get) success 1`] = `
Object {
  "prompts": Object {
    "42": Array [
      Object {
        "id": "x",
      },
      Object {
        "id": "y",
      },
      Object {
        "id": "z",
      },
    ],
  },
  "responses": Array [
    Object {
      "response_id": 1,
      "scenario_id": 42,
    },
  ],
}
`;

exports[`/api/cohort/* /api/cohort/:id/quit (get) success 1`] = `
Object {
  "users": Array [
    Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_owner": true,
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "username": "superuser",
    },
  ],
  "usersById": Object {
    "11": Object {
      "email": null,
      "id": 11,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "warmhearted-jackal",
    },
    "12": Object {
      "email": null,
      "id": 12,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "super-insect",
    },
    "9": Object {
      "email": null,
      "id": 9,
      "is_anonymous": true,
      "is_owner": false,
      "roles": Array [
        "participant",
      ],
      "username": "valuable-ram",
    },
    "999": Object {
      "email": "super@email.com",
      "id": 999,
      "is_anonymous": false,
      "is_owner": true,
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "username": "superuser",
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id/run/:run_id (get) success 1`] = `
Object {
  "cohort": Object {
    "created_at": "2020-07-24T14:52:28.429Z",
    "id": 1,
    "name": "First Cohort",
    "roles": Array [
      "owner",
      "facilitator",
      "participant",
    ],
    "runs": Array [
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-28T19:44:03.069Z",
        "ended_at": "2020-07-31T17:01:43.128Z",
        "id": 11,
        "referrer_params": null,
        "run_id": 11,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:01:43.139Z",
        "user_id": 999,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:01:52.908Z",
        "ended_at": "2020-07-31T17:02:00.296Z",
        "id": 28,
        "referrer_params": null,
        "run_id": 28,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:00.309Z",
        "user_id": 9,
      },
      Object {
        "cohort_id": 1,
        "consent_acknowledged_by_user": true,
        "consent_granted_by_user": true,
        "consent_id": 8,
        "created_at": "2020-07-31T17:02:51.357Z",
        "ended_at": "2020-07-31T17:02:57.043Z",
        "id": 29,
        "referrer_params": null,
        "run_id": 29,
        "scenario_id": 7,
        "updated_at": "2020-07-31T17:02:57.054Z",
        "user_id": 11,
      },
    ],
    "scenarios": Array [
      7,
      1,
      9,
      8,
    ],
    "users": Array [
      Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    ],
    "usersById": Object {
      "11": Object {
        "email": null,
        "id": 11,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "warmhearted-jackal",
      },
      "12": Object {
        "email": null,
        "id": 12,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "super-insect",
      },
      "9": Object {
        "email": null,
        "id": 9,
        "is_anonymous": true,
        "is_owner": false,
        "roles": Array [
          "participant",
        ],
        "username": "valuable-ram",
      },
      "999": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_owner": true,
        "roles": Array [
          "owner",
          "facilitator",
          "participant",
        ],
        "username": "superuser",
      },
    },
  },
}
`;

exports[`/api/cohort/* /api/cohort/:id/scenario/:scenario_id (get) success 1`] = `
Object {
  "prompts": Array [
    Object {
      "id": "x",
    },
    Object {
      "id": "y",
    },
    Object {
      "id": "z",
    },
  ],
  "responses": Array [
    Object {
      "response_id": 1,
      "scenario_id": 42,
    },
  ],
}
`;

exports[`/api/cohort/* /api/cohort/:id/scenario/:scenario_id/:user_id (get) success 1`] = `
Object {
  "prompts": Array [
    Object {
      "id": "x",
    },
    Object {
      "id": "y",
    },
    Object {
      "id": "z",
    },
  ],
  "responses": Array [
    Object {
      "response_id": 1,
      "scenario_id": 42,
    },
  ],
}
`;

exports[`/api/cohort/* /api/cohort/all (get) success 1`] = `
Object {
  "cohorts": Array [
    Object {
      "created_at": "2020-07-24T14:52:28.429Z",
      "id": 1,
      "name": "First Cohort",
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-28T19:44:03.069Z",
          "ended_at": "2020-07-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:01:43.139Z",
          "user_id": 999,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:01:52.908Z",
          "ended_at": "2020-07-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:00.309Z",
          "user_id": 9,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:02:51.357Z",
          "ended_at": "2020-07-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:57.054Z",
          "user_id": 11,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "users": Array [
        Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_owner": true,
          "roles": Array [
            "owner",
            "facilitator",
            "participant",
          ],
          "username": "superuser",
        },
      ],
      "usersById": Object {
        "11": Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        "12": Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        "9": Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        "999": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_owner": true,
          "roles": Array [
            "owner",
            "facilitator",
            "participant",
          ],
          "username": "superuser",
        },
      },
    },
  ],
}
`;

exports[`/api/cohort/* /api/cohort/all (get) success: Array [] 1`] = `Array []`;

exports[`/api/cohort/* /api/cohort/my (get) success 1`] = `
Object {
  "cohorts": Array [
    Object {
      "created_at": "2020-07-24T14:52:28.429Z",
      "id": 1,
      "name": "First Cohort",
      "roles": Array [
        "owner",
        "facilitator",
        "participant",
      ],
      "runs": Array [
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-28T19:44:03.069Z",
          "ended_at": "2020-07-31T17:01:43.128Z",
          "id": 11,
          "referrer_params": null,
          "run_id": 11,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:01:43.139Z",
          "user_id": 999,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:01:52.908Z",
          "ended_at": "2020-07-31T17:02:00.296Z",
          "id": 28,
          "referrer_params": null,
          "run_id": 28,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:00.309Z",
          "user_id": 9,
        },
        Object {
          "cohort_id": 1,
          "consent_acknowledged_by_user": true,
          "consent_granted_by_user": true,
          "consent_id": 8,
          "created_at": "2020-07-31T17:02:51.357Z",
          "ended_at": "2020-07-31T17:02:57.043Z",
          "id": 29,
          "referrer_params": null,
          "run_id": 29,
          "scenario_id": 7,
          "updated_at": "2020-07-31T17:02:57.054Z",
          "user_id": 11,
        },
      ],
      "scenarios": Array [
        7,
        1,
        9,
        8,
      ],
      "users": Array [
        Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_owner": true,
          "roles": Array [
            "owner",
            "facilitator",
            "participant",
          ],
          "username": "superuser",
        },
      ],
      "usersById": Object {
        "11": Object {
          "email": null,
          "id": 11,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "warmhearted-jackal",
        },
        "12": Object {
          "email": null,
          "id": 12,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "super-insect",
        },
        "9": Object {
          "email": null,
          "id": 9,
          "is_anonymous": true,
          "is_owner": false,
          "roles": Array [
            "participant",
          ],
          "username": "valuable-ram",
        },
        "999": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_owner": true,
          "roles": Array [
            "owner",
            "facilitator",
            "participant",
          ],
          "username": "superuser",
        },
      },
    },
  ],
}
`;
